--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@oclif/plugin-plugins": "^2.0.1",
     "@types/axios": "^0.14.0",
     "@types/inquirer": "^8.2.0",
+    "@types/jsdom": "^16.2.14",
+    "@types/node-fetch": "^3.0.3",
     "axios": "^0.25.0",
     "cli-ux": "^6.0.8",
     "csv-writer": "^1.6.0",
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "jsdom": "^19.0.0",
+    "node-fetch": "^3.2.0"
   },
   "devDependencies": {
     "@oclif/test": "^2",
