--- a/package.json
+++ b/package.json
@@ -20,16 +20,24 @@
     "@oclif/core": "^1",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.0",
+    "@prisma/client": "^3.9.1",
     "@types/axios": "^0.14.0",
     "@types/inquirer": "^8.2.0",
     "@types/jsdom": "^16.2.14",
     "@types/node-fetch": "^3.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "axios": "^0.25.0",
     "cli-ux": "^6.0.9",
     "csv-writer": "^1.6.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-unicorn": "^40.1.0",
     "inquirer": "^8.2.0",
     "jsdom": "^19.0.0",
-    "node-fetch": "^3.2.0"
+    "node-fetch": "^3.2.0",
+    "prettier": "^2.5.1",
+    "prisma": "^3.9.1"
   },
   "devDependencies": {
     "@oclif/test": "^2",
@@ -37,8 +45,8 @@
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.22",
     "chai": "^4",
-    "eslint": "^7.32.0",
-    "eslint-config-oclif": "^4",
+    "eslint": "^8.8.0",
+    "eslint-config-oclif": "^4.0.0",
     "eslint-config-oclif-typescript": "^1.0.2",
     "globby": "^11",
     "mocha": "^9",
