#43 ソースの整理
ソース内の誤字を修正
コメントの追加
lint系ツールのコミット時自動実行

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
   "root": true,
   "rules": {
     "object-curly-spacing": ["off"],
-    "unicorn/filename-case": ["off"]
+    "unicorn/filename-case": ["off"],
+    "valid-jsdoc": ["off"]
   }
 }
