--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "printWidth": 80,
   "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": true,
+  "trailingComma": "es5",
   "semi": false,
   "parser": "typescript"
 }
