--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "globby": "^11",
     "husky": "^7.0.4",
     "install": "^0.13.0",
+    "lint-staged": "^12.3.5",
     "mocha": "^9",
     "npm-run-all": "^4.1.5",
     "oclif": "^2",
+    "prettier-eslint-cli": "^5.0.1",
     "rimraf": "^3.0.2",
     "shx": "^0.3.4",
     "ts-node": "^10.2.1",
@@ -98,5 +100,10 @@
       "pre-commit": "yarn lint-format"
     }
   },
+
+ "lint-staged": {
+  "*.{js,ts,css,md}": "lint-format"
+},
+
   "types": "dist/index.d.ts"
 }
