--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
   },
 
  "lint-staged": {
-  "*.{js,ts,css,md}": "lint-format"
+  "./src/*.{js,ts}": "lint-format"
 },
 
   "types": "dist/index.d.ts"
