--- a/package.json
+++ b/package.json
@@ -86,7 +86,11 @@
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md",
     "format": "prettier --write src/**/*",
-    "lint-format": "run-s lint format"
+    "lint-format": "run-s lint format",
+    "scrape":"./bin/dev scrape",
+    "getAnime":"./bin/dev getAnime",
+    "exportCsv":"./bin/dev exportCsv",
+    "addRecord":"./bin/dev addRecord"
   },
   "engines": {
     "node": ">=12.0.0"
