--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     "google",
     "prettier" // prettierのextendsは最後に記述
   ],
-  "plugins": ["@typescript-eslint", "unicorn"],
+  "plugins": ["@typescript-eslint", "unicorn", "jsdoc"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
@@ -18,6 +18,20 @@
   "rules": {
     "object-curly-spacing": ["off"],
     "unicorn/filename-case": ["off"],
-    "valid-jsdoc": ["off"]
+    "jsdoc/require-jsdoc": [
+      "error",
+      {
+        "publicOnly": true,
+        "require": {
+          "ArrowFunctionExpression": true,
+          "ClassDeclaration": true,
+          "MethodDefinition": true
+        },
+        "checkConstructors": false
+      }
+    ],
+    "jsdoc/require-param-type": 0,
+    "jsdoc/require-returns": 0,
+    "require-jsdoc": 2
   }
 }
