--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "oclif"
   ],
   "lint-staged": {
-    "./src/**": [
+    "*.{js,jsx,ts,tsx}": [
       "yarn lint",
       "yarn format"
     ]
