--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "getAnime": "./bin/dev getAnime",
     "exportCsv": "./bin/dev exportCsv",
     "addRecord": "./bin/dev addRecord",
-    "getEpisode":"./bin/dev getEpisode"
+    "getEpisode": "./bin/dev getEpisode",
+    "getPageData": "./bin/dev getPageData"
   },
   "engines": {
     "node": ">=12.0.0"
