--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsdoc": "^39.3.2",
-    "eslint-plugin-unicorn": "^40.1.0",
     "inquirer": "^8.2.0",
     "jsdom": "^20.0.3",
     "node-fetch": "^3.2.0",
@@ -39,14 +38,13 @@
     "prisma": "^3.9.1"
   },
   "devDependencies": {
+    "@json2csv/plainjs": "7.0.4",
     "@oclif/test": "^2",
     "@types/chai": "^4",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.22",
     "chai": "^4",
     "eslint": "^8.29.0",
-    "eslint-config-oclif": "^4.0.0",
-    "eslint-config-oclif-typescript": "^1.0.2",
     "globby": "^11",
     "husky": "^7.0.4",
     "install": "^0.13.0",
@@ -89,8 +87,7 @@
     "scrape": "./bin/dev scrape",
     "getAnime": "./bin/dev getAnime",
     "exportCsv": "./bin/dev exportCsv",
-    "addRecord": "./bin/dev addRecord",
-    "getPageData": "./bin/dev getPageData"
+    "addRecord": "./bin/dev addRecord"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -105,5 +102,6 @@
       "yarn format"
     ]
   },
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "packageManager": "yarn@4.0.2"
 }
