--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
-    "@oclif/core": "^1",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.1.8",
     "@prisma/client": "^3.9.1",
@@ -34,12 +33,12 @@
     "inquirer": "^8.2.0",
     "jsdom": "^20.0.3",
     "node-fetch": "^3.2.0",
+    "oclif": "4.5.2",
     "prettier": "^2.8.1",
     "prisma": "^3.9.1"
   },
   "devDependencies": {
     "@json2csv/plainjs": "7.0.4",
-    "@oclif/test": "^2",
     "@types/chai": "^4",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.22",
@@ -51,11 +50,11 @@
     "lint-staged": "^12.3.5",
     "mocha": "^9",
     "npm-run-all": "^4.1.5",
-    "oclif": "^2",
     "prettier-eslint-cli": "^5.0.1",
     "rimraf": "^3.0.2",
     "shx": "^0.3.4",
     "ts-node": "^10.2.1",
+    "tsconfig-paths": "4.2.0",
     "tslib": "^2.3.1",
     "typescript": "^4.9.4"
   },
