--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,11 @@
     "rootDir": "src",
     "strict": true,
     "target": "es2019",
-    "baseUrl": "./",
+    "baseUrl": "src",
     "composite": true,
     "paths": {
-      "csv-writer": ["src/types/csvWriter"]
+      "@utils/*":["./Utils/*"],
+      "@type/*":["./types/*"]
     }
   },
   "include": ["src/**/*"]
