--- a/package.json
+++ b/package.json
@@ -15,48 +15,39 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
-    "@oclif/plugin-help": "^5.2.20",
-    "@oclif/plugin-plugins": "^2.4.7",
-    "@prisma/client": "^3.15.2",
+    "@oclif/plugin-help": "^6.2.20",
+    "@oclif/plugin-plugins": "^5.4.24",
+    "@prisma/client": "^6.1.0",
     "@types/axios": "^0.14.4",
-    "@types/inquirer": "^8.2.10",
-    "@types/jsdom": "^20.0.1",
-    "@types/node-fetch": "^3.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "axios": "^0.25.0",
-    "cli-ux": "^6.0.9",
+    "@types/inquirer": "^9.0.7",
+    "@types/jsdom": "^21.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
+    "axios": "^1.7.9",
     "csv-writer": "^1.6.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-jsdoc": "^39.9.1",
-    "inquirer": "^8.2.6",
-    "jsdom": "^20.0.3",
-    "node-fetch": "^3.3.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^50.6.1",
+    "inquirer": "^12.3.0",
+    "jsdom": "^25.0.1",
     "oclif": "4.17.7",
-    "prettier": "^2.8.8",
-    "prisma": "^3.15.2"
+    "prettier": "^3.4.2",
+    "prisma": "^6.1.0",
+    "typescript": "5.7.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.17.0",
     "@json2csv/plainjs": "7.0.6",
-    "@types/chai": "^4.3.20",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^16.18.123",
-    "chai": "^4.5.0",
-    "eslint": "^8.57.1",
-    "globby": "^11.1.0",
-    "husky": "^7.0.4",
+    "@types/node": "22.10.3",
+    "eslint": "^9.17.0",
+    "husky": "^9.1.7",
     "install": "^0.13.0",
-    "lint-staged": "^12.5.0",
-    "mocha": "^9.2.2",
+    "lint-staged": "^15.3.0",
     "npm-run-all": "^4.1.5",
-    "prettier-eslint-cli": "^5.0.1",
-    "rimraf": "^3.0.2",
-    "shx": "^0.3.4",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "4.2.0",
-    "tslib": "^2.8.1",
-    "typescript": "^4.9.5"
+    "prettier-eslint-cli": "^8.0.1",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0"
   },
   "oclif": {
     "bin": "test",
@@ -75,7 +66,7 @@
   },
   "scripts": {
     "build": "shx rm -rf dist && tsc -b",
-    "lint": "eslint . --ext .ts --config .eslintrc --fix",
+    "lint": "eslint .  --fix",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
